# my-pricer

./: .coverage  .env  .env.example  .gitignore  AmazonQ.md  CMakeLists.txt  DUPLICATION_REMOVAL_SUCCESS.md  README.md  REFACTORING_SUMMARY.md  TESTING.md  WEB_APP_README.md  adaptive_backtest.py  backtester.py  backtester_cython.c  backtester_cython.cpp  backtester_cython.pyx  chart.py  clear_jobs.py  commit_message.txt  compare_performance.py  compare_position_sizing.py  config.py  convert_icons.sh  create_default_icons.sh  data.py  debug_signals.py  get_volatile_cryptos.py  get_volatile_cryptos_v2.py  implementation_summary.py  indicators.py  lines.py  magnitude.py  manage_results.py  manage_results_v2.py  migrate_to_refactored_pricer.py  ohlc_data.csv  optimize_bayesian.py  optimize_bayesian_v2.py  pricer.py  pricer_compatibility_fix.py  (+16 more)
.github/workflows/: tests.yml
android/: build.gradle  build_openssl.sh
android/app/: build.gradle
backtest_results/: best_params_bitcoin_Debug_EMA_Only_bayesian.json  best_params_bitcoin_Debug_Single_Long_Entry_bayesian.json  best_params_bitcoin_EMA_Only_bayesian.json  best_params_chainlink_1d_5m_tiny.json  best_params_ethereum_1d_5m_tiny.json  best_params_ethereum_tiny.json  best_params_mantle_EMA_Only_bayesian.json  best_params_okb_EMA_Only_bayesian.json  best_params_pudgy-penguins_EMA_Only_bayesian.json  best_params_solana_1d_5m_tiny.json  volatile_cryptos.json  volatile_optimization_results_20250821_104108.json  volatile_optimization_results_20250821_105349.json  volatile_optimization_results_20250821_110050.json
core/: __init__.py  app_config.py  backtester_wrapper.py  crypto_discovery.py  data_fetcher.py  data_manager.py  exceptions.py  job_status_manager.py  logger_config.py  optimize_cryptos_job.py  optimizer.py  paper_trading_engine.py  parameter_manager.py  rate_limiter.py  rate_limiter_process.py  result_manager.py  scheduler.py  single_strategy_optimizer_job.py  trading_engine.py
data/results/: analysis_bitcoin_20250822_083601.json  analysis_bitcoin_20250822_125153.json  analysis_bitcoin_20250822_125156.json  analysis_bitcoin_20250822_174125.json  analysis_bitcoin_20250822_180141.json  analysis_bitcoin_20250823_113059.json  analysis_bitcoin_20250823_113506.json  analysis_bitcoin_20250823_113712.json  analysis_bitcoin_20250823_114026.json  analysis_bitcoin_20250823_115121.json  analysis_bitcoin_20250823_115554.json  analysis_bitcoin_20250823_115757.json  analysis_bitcoin_20250823_115839.json  analysis_bitcoin_20250823_120516.json  analysis_bitcoin_20250823_120623.json  analysis_bitcoin_20250823_120909.json  analysis_bitcoin_20250823_122421.json  analysis_bitcoin_20250823_123118.json  analysis_bitcoin_20250823_123523.json  analysis_bitcoin_20250823_165138.json  analysis_bitcoin_20250823_171502.json  analysis_cardano_20250823_165146.json  analysis_solana_20250823_123538.json  analysis_solana_20250823_123921.json  analysis_solana_20250823_123936.json  analysis_solana_20250823_124138.json  analysis_solana_20250823_125645.json  analysis_solana_20250823_164850.json  analysis_solana_20250823_170100.json  analysis_solana_20250823_170308.json  analysis_solana_20250823_171604.json  analysis_solana_20250823_175913.json  backtest_bitcoin_EMA_Only_20250822_083622.json  backtest_bitcoin_EMA_Only_20250822_125201.json  backtest_bitcoin_EMA_Only_20250822_125202.json  backtest_bitcoin_EMA_Only_20250823_171521.json  backtest_bitcoin_EMA_Only_20250823_172117.json  backtest_bitcoin_EMA_Only_20250823_175942.json  backtest_bitcoin_EMA_Only_20250823_180257.json  backtest_bitcoin_EMA_Only_20250823_180413.json  (+24 more)
deploy/: deploy.sh  deploy_backend.sh  deploy_backend_code.sh  flask-service.service  frontend.conf  setup-secrets.sh  start.sh
deploy/apache/: my-pricer-api.gillesstenger.fr.conf
docs/: README.md  api.md  backtester.md  bayesian_optimization.md  optimizer.md  paper_trader.md  session_summary_auth0_mui.md  strategy.md  volatile_crypto_discovery.md  volatile_crypto_optimizer.md
docs/strategies/: bb_breakout.md  bb_rsi.md  combined_trigger_verifier.md  ema_only.md  strict.md
examples/: openssl_example.java  run_backtest_example.py  run_fetcher_example.py  run_indicators_example.py  run_strategy_example.py
include/: application.h
include/platform/: platform_android.h  platform_base.h
live_results/: bitcoin_analysis_20250821_140915.json  bitcoin_analysis_20250821_141056.json  bitcoin_analysis_20250821_141111.json  bitcoin_analysis_20250821_150535.json
make/android/: buildozer.spec
production/: backend.conf  deploy_backend.sh  deploy_config_fix.sh  deploy_frontend_code.sh  flask-service.service
src/: application.cpp  openssl_wrapper.cpp  python_bridge.cpp
src/app/: app_main.cpp  coingecko_fetcher.cpp  polygon_fetcher.cpp
src/include/: python_bridge.h
src/platform/: platform_android.cpp
stock_monitoring_app/: config.py
stock_monitoring_app/backtest/: backtest.py
stock_monitoring_app/cli/: monitor.py
stock_monitoring_app/fetchers/: coingecko_fetcher.py  polygon_fetcher.py
stock_monitoring_app/indicators/: atr_indicator.py  bollinger_bands_indicator.py  breakout_indicator.py  ma_indicator.py  macd_indicator.py  rsi_indicator.py  volume_spike_indicator.py
stock_monitoring_app/monitor/: __init__.py  monitor.py
stock_monitoring_app/monitoring/: ticker_monitor.py  ticker_monitor.py.orig
tests/: README.md  __init__.py  conftest.py  test_api_auth.py  test_api_integration.py  test_backtest.py  test_backtester_cython.py  test_chart.py  test_data.py  test_functional.py  test_integration.py  test_lines.py  test_live_trader.py  test_magnitude.py  test_optimize_bayesian.py  test_optimize_bayesian_v2.py  test_performance.py  test_pricer.py  test_runner.py  test_scheduler.py  test_unified_core.py  test_unit.py  test_utils.py  test_volatile_crypto_optimizer.py  test_volatile_crypto_optimizer_v2.py
ticker_monitor/: kivy_main.py  urwid_main.py
ticker_monitor_tui/: README.md  __init__.py  kivy_tui_main.py  main_tui.py  main_tui.py.orig  main_tui.tcss  tui_models.py  tui_monitor_manager.py  urwid_main.py
web/backend/: .env  (+6 more)
(+213 files in other folders)
